<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/DialogView">

    <TableLayout style="@style/DialogContent.Table">

        <TableRow style="@style/DialogView">

            <LinearLayout
                style="@style/DialogView"
                android:layout_span="2"
                android:orientation="vertical">

                <TextView
                    style="@style/DialogText.Description"
                    android:text="@string/input_description_title" />

                <EditText
                    android:id="@+id/editTextTitle"
                    style="@style/DialogInput.EditText"
                    android:hint="@string/input_hint_title"
                    android:importantForAutofill="no" />

                <TextView
                    style="@style/DialogText.Description"
                    android:text="@string/input_description_content" />

                <EditText
                    android:id="@+id/editTextContent"
                    style="@style/DialogInput.EditText"
                    android:hint="@string/input_hint_content"
                    android:importantForAutofill="no" />
            </LinearLayout>
        </TableRow>

        <TableRow style="@style/DialogView">

            <TextView
                style="@style/DialogText.Description"
                android:layout_column="0"
                android:text="@string/input_description_visibility" />

            <TextView
                style="@style/DialogText.Description"
                android:layout_column="1"
                android:text="@string/input_description_priority" />
        </TableRow>

        <TableRow style="@style/DialogView">

            <Spinner
                android:id="@+id/spinnerVisibility"
                style="@style/DialogSpinner"
                android:layout_column="0" />

            <Spinner
                android:id="@+id/spinnerPriority"
                style="@style/DialogSpinner"
                android:layout_column="1" />
        </TableRow>

        <TableRow style="@style/DialogView">

            <CheckBox
                android:id="@+id/checkBoxPersistentPin"
                style="@style/DialogText.CheckBox"
                android:layout_marginTop="16dp"
                android:layout_span="2"
                android:text="@string/input_description_makepinpersistent" />

        </TableRow>

        <TableRow style="@style/DialogView">

            <CheckBox
                android:id="@+id/checkBoxShowActions"
                style="@style/DialogText.CheckBox"
                android:layout_marginTop="4dp"
                android:layout_span="2"
                android:text="@string/input_description_shownotificationactions" />

        </TableRow>

    </TableLayout>
</ScrollView>