<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/MainWrapper"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:background="@color/background"
    tools:context=".view.MainDialog"
    tools:ignore="Overdraw">

    <de.dotwee.micropinner.view.custom.DialogHeaderView
        android:id="@+id/dialogHeaderView"
        style="@style/DialogView"
        android:background="@color/background" />

    <de.dotwee.micropinner.view.custom.DialogContentView
        android:id="@+id/dialogContentView"
        style="@style/DialogView"
        android:layout_weight="1"
        tools:ignore="InefficientWeight" />

    <de.dotwee.micropinner.view.custom.DialogFooterView
        android:id="@+id/dialogFooterView"
        style="@style/DialogView"
        android:background="@color/background" />

</LinearLayout>
