<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayoutHeader"
    style="@style/DialogHeader"
    android:measureWithLargestChild="false"
    tools:showIn="@layout/dialog_main">

    <TextView
        android:id="@+id/dialogTitle"
        style="@style/TextAppearance.AppCompat.Widget.ActionMode.Title"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        android:gravity="center_vertical"
        android:text="@string/app_name" />

    <Space
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent">

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switchAdvanced"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>