<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">MicroPinner</string>

    <string name="main_name">New Pin</string>
    <string name="edit_name">Edit Pin</string>

    <string name="input_description_title">Title</string>
    <string name="input_description_content">Content</string>

    <string name="input_description_priority">Priority</string>
    <string name="input_description_visibility">Visibility</string>

    <string name="input_description_makepinpersistent">Make pin persistent</string>
    <string name="input_description_shownotificationactions">Show notification actions</string>

    <string name="dialog_action_pin">Pin</string>
    <string name="dialog_action_cancel">Cancel</string>
    <string name="dialog_action_delete">Delete</string>

    <string name="input_hint_title">Title</string>
    <string name="input_hint_content">Content</string>

    <string name="message_visibility_unsupported">Hey! Seems like you are using a older Android Version, where the visibility-setting is unsupported.</string>
    <string name="message_notifications_permission_denied" tools:ignore="MissingTranslation">Permission to send notifications is required for this app to function.</string>
    <string name="message_clipped_pin">Pin has been copied to clipboard.</string>
    <string name="message_empty_title">The title has to contain text.</string>
    <string name="message_save_to_clipboard">Save to clipboard</string>
    <string name="message_hidden_private_content" tools:ignore="MissingTranslation">Contents hidden</string>

    <string name="notifications_channel_public" tools:ignore="MissingTranslation">Public Pins</string>
    <string name="notifications_channel_private" tools:ignore="MissingTranslation">Private Pins</string>
    <string name="notifications_channel_secret" tools:ignore="MissingTranslation">Secret Pins</string>

    <string name="visibility_public">public</string>
    <string name="visibility_private">private</string>
    <string name="visibility_secret">secret</string>

    <string name="priority_min">min</string>
    <string name="priority_low">low</string>
    <string name="priority_high">high</string>
    <string name="priority_default">default</string>
</resources>
